@@ -6,6 +6,7 @@ import com.api.ttoklip.domain.honeytip.post.post.domain.HoneytipUrl;
 import com.api.ttoklip.domain.honeytip.post.post.domain.repository.HoneytipRepository;
 import com.api.ttoklip.domain.honeytip.post.post.dto.request.HoneytipCreateReq;
 import com.api.ttoklip.domain.honeytip.post.post.dto.response.HoneytipWithCommentRes;
+import com.api.ttoklip.domain.honeytip.post.post.editor.HoneytipPostEditor;
 import com.api.ttoklip.global.s3.S3FileUploader;
 import com.api.ttoklip.global.success.Message;
 import lombok.RequiredArgsConstructor;
@@ -26,23 +27,26 @@ public class HoneytipPostService {
     public Long register(final HoneytipCreateReq request) {
         // S3에 이미지 업로드 후 URL 목록을 가져온다.
         List<String> imageUrls = s3FileUploader.uploadMultipartFiles(request.getImages());
-        for (String imageUrl : imageUrls) {
-            System.out.println("imageUrl = " + imageUrl);
-        }
 
         // HoneytipImage 객체 생성
         List<HoneytipImage> honeytipImages = imageUrls.stream()
-                .map(url -> new HoneytipImage(url, null))
-                .collect(Collectors.toList());
+                .map(url -> HoneytipImage.builder()
+                        .url(url)
+                        .honeytip(null)
+                        .build())
+                .toList();
 
         //HoneytipUrl 객체 생성
         List<HoneytipUrl> honeytipUrls = request.getUrl().stream()
-                .map(url -> new HoneytipUrl(url, null))
-                .collect(Collectors.toList());
+                .map(url -> HoneytipUrl.builder()
+                        .url(url)
+                        .honeytip(null)
+                        .build())
+                .toList();
 
 
         // Honeytip 객체 생성 및 연관 관계 설정
-        Honeytip honeytip =Honeytip.builder()
+        Honeytip honeytip = Honeytip.builder()
                 .title(request.getTitle())
                 .content(request.getContent())
                 .category(request.getCategory())
@@ -73,26 +77,26 @@ public class HoneytipPostService {
 
         // S3에 이미지 업로드 후 URL 목록을 가져온다.
         List<String> imageUrls = s3FileUploader.uploadMultipartFiles(request.getImages());
-        for (String imageUrl : imageUrls) {
-            System.out.println("imageUrl = " + imageUrl);
-        }
 
         // HoneytipImage 객체 생성
         List<HoneytipImage> honeytipImages = imageUrls.stream()
-                .map(url -> new HoneytipImage(url, null))
-                .collect(Collectors.toList());
+                .map(url -> HoneytipImage.builder()
+                        .url(url)
+                        .honeytip(null)
+                        .build())
+                .toList();
 
         //HoneytipUrl 객체 생성
         List<HoneytipUrl> honeytipUrls = request.getUrl().stream()
-                .map(url -> new HoneytipUrl(url, null))
-                .collect(Collectors.toList());
+                .map(url -> HoneytipUrl.builder()
+                        .url(url)
+                        .honeytip(null)
+                        .build())
+                .toList();
 
 
-
-
-
-        // Honeytip 객체 생성 및 연관 관계 설정
-        Honeytip honeytip =Honeytip.builder()
+        // HoneytipPostEditor 객체 생성 및 연관 관계 설정
+        HoneytipPostEditor editor = HoneytipPostEditor.builder()
                 .title(request.getTitle())
                 .content(request.getContent())
                 .category(request.getCategory())
@@ -100,15 +104,8 @@ public class HoneytipPostService {
                 .honeytipUrlList(honeytipUrls)
                 .build();
 
-        honeytipImages.forEach(image -> image.updateHoneytip(honeytip));
-        honeytipUrls.forEach(url -> url.updateHoneytip(honeytip));
-
         // 꿀팁 업데이트
-        existingHoneytip.updateHoneytip(request.getTitle(), request.getContent(), request.getCategory(), honeytipImages, honeytipUrls);
-
-
-        // 엔티티에 저장
-        honeytipRepository.save(existingHoneytip);
+        editor.applyTo(existingHoneytip);
 
         // 작성된 꿀팁의 id 값 리턴
         return existingHoneytip.getId();
